[gd_scene load_steps=7 format=3 uid="uid://hwvrl37b2dlk"]

[ext_resource type="Script" uid="uid://chrq3r3tre42w" path="res://UI/SkillUI.gd" id="1_6m8pb"]
[ext_resource type="Script" uid="uid://bghevohiykay4" path="res://UI/InventoryDropArea.gd" id="2_5m5hr"]
[ext_resource type="Script" uid="uid://cpwt2xbarsbmf" path="res://UI/EquipSlot.gd" id="3_5m5hr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6m8pb"]
content_margin_left = 8.0
content_margin_top = 2.0
content_margin_right = 8.0
content_margin_bottom = 2.0
bg_color = Color(0, 0, 0, 0.5)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="Theme" id="Theme_6m8pb"]
TooltipLabel/colors/font_color = Color(1, 1, 1, 1)
TooltipPanel/colors/panel = Color(0, 0, 0, 1)
TooltipPanel/styles/panel = SubResource("StyleBoxFlat_6m8pb")

[sub_resource type="LabelSettings" id="LabelSettings_6m8pb"]

[node name="SkillUI" type="CanvasLayer"]
visible = false
script = ExtResource("1_6m8pb")

[node name="Panel" type="Panel" parent="."]
offset_left = 654.0
offset_top = 321.0
offset_right = 1854.0
offset_bottom = 1021.0
theme = SubResource("Theme_6m8pb")

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 24.0
offset_top = 4.0
offset_right = 130.0
offset_bottom = 27.0
text = "Equiped Skills"

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 280.0
offset_right = 100.0
offset_bottom = 309.0
text = "Skills List"
label_settings = SubResource("LabelSettings_6m8pb")

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
custom_minimum_size = Vector2(0, 320)
layout_mode = 0
offset_left = 24.0
offset_top = 320.0
offset_right = 1174.0
offset_bottom = 680.0
script = ExtResource("2_5m5hr")

[node name="InventoryGrid" type="GridContainer" parent="Panel/ScrollContainer"]
layout_mode = 2
columns = 9

[node name="EquippedSlots" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 180.0
offset_top = 48.0
offset_right = 980.0
offset_bottom = 208.0
theme_override_constants/separation = 180

[node name="Slot1" type="PanelContainer" parent="Panel/EquippedSlots"]
layout_mode = 2
script = ExtResource("3_5m5hr")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/EquippedSlots/Slot1"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="Panel/EquippedSlots/Slot1/VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Panel/EquippedSlots/Slot1/VBoxContainer"]
layout_mode = 2

[node name="Slot2" type="PanelContainer" parent="Panel/EquippedSlots"]
layout_mode = 2
script = ExtResource("3_5m5hr")
slot_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/EquippedSlots/Slot2"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="Panel/EquippedSlots/Slot2/VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Panel/EquippedSlots/Slot2/VBoxContainer"]
layout_mode = 2

[node name="Slot3" type="PanelContainer" parent="Panel/EquippedSlots"]
layout_mode = 2
script = ExtResource("3_5m5hr")
slot_index = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/EquippedSlots/Slot3"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="Panel/EquippedSlots/Slot3/VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Panel/EquippedSlots/Slot3/VBoxContainer"]
layout_mode = 2
